# uarm-xarm6-teleop

./: README.md  pyproject.toml  requirements.txt
configs/: uarm_xarm6.toml
src/uarm_xarm6_teleop/: __init__.py  config.py  feetech.py  mapping.py
src/uarm_xarm6_teleop/backends/: __init__.py  maniskill.py  xarm.py
src/uarm_xarm6_teleop/cli/: common.py  monitor.py  real.py  sim.py  tune_reference.py
tests/: test_config.py  test_mapping.py  test_xarm_backend.py
